--- a/client/src/component/Styles.css
+++ b/client/src/component/Styles.css
@@ -43,7 +43,6 @@
     float: left;
 }
 
-
 #mapEmbed {
   grid-area: map;
   /* width: 100%; */
@@ -55,6 +54,23 @@
     clear: both;
     display: table;
 }
+
+#modal {
+    width: 30%;
+}
+
+#modal::after {
+    content: "";
+    background: url("./images/nightOwl.png");
+    object-fit: contain;
+    opacity: 0.2;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -1;   
+  }
 
 .container {
   display: grid;
