--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,8 +6,150 @@
   grid-area: header;
 }
 
+.sentence {
+  color: #222;
+  font-size: 30px;
+  text-align: left;
+  margin-left: 33%;
+}
+
+.nearYou {
+  color: #222;
+  margin-left: 50%;
+  margin-top: -5%;
+  font-size: 30px;
+}
+
+.wrapper {
+  background-color: #f5f5f5;
+  font-family: "Raleway", sans-serif;
+  margin: 100px auto;
+  padding: 40px 40px;
+  position: relative;
+  width: 70%;
+}
+
+.slidingVertical {
+  display: inline;
+  text-indent: 8px;
+}
+.slidingVertical span {
+  animation: topToBottom 12.5s linear infinite 0s;
+  -ms-animation: topToBottom 12.5s linear infinite 0s;
+  -webkit-animation: topToBottom 12.5s linear infinite 0s;
+  color: #4d12f1;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  transition-timing-function: ease-in;
+  transition: 0.2s;
+}
+.slidingVertical span:nth-child(2) {
+  animation-delay: 2.5s;
+  -ms-animation-delay: 2.5s;
+  -webkit-animation-delay: 2.5s;
+}
+.slidingVertical span:nth-child(3) {
+  animation-delay: 5s;
+  -ms-animation-delay: 5s;
+  -webkit-animation-delay: 5s;
+}
+.slidingVertical span:nth-child(4) {
+  animation-delay: 7.5s;
+  -ms-animation-delay: 7.5s;
+  -webkit-animation-delay: 7.5s;
+}
+.slidingVertical span:nth-child(5) {
+  animation-delay: 10s;
+  -ms-animation-delay: 10s;
+  -webkit-animation-delay: 10s;
+}
+
+/*topToBottom Animation*/
+@-moz-keyframes topToBottom {
+  0% {
+    opacity: 0;
+  }
+  5% {
+    opacity: 0;
+    -moz-transform: translateY(-50px);
+  }
+  10% {
+    opacity: 1;
+    -moz-transform: translateY(0px);
+  }
+  25% {
+    opacity: 1;
+    -moz-transform: translateY(0px);
+  }
+  30% {
+    opacity: 0;
+    -moz-transform: translateY(50px);
+  }
+  80% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@-webkit-keyframes topToBottom {
+  0% {
+    opacity: 0;
+  }
+  5% {
+    opacity: 0;
+    -webkit-transform: translateY(-50px);
+  }
+  10% {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+  }
+  25% {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+  }
+  30% {
+    opacity: 0;
+    -webkit-transform: translateY(50px);
+  }
+  80% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@-ms-keyframes topToBottom {
+  0% {
+    opacity: 0;
+  }
+  5% {
+    opacity: 0;
+    -ms-transform: translateY(-50px);
+  }
+  10% {
+    opacity: 1;
+    -ms-transform: translateY(0px);
+  }
+  25% {
+    opacity: 1;
+    -ms-transform: translateY(0px);
+  }
+  30% {
+    opacity: 0;
+    -ms-transform: translateY(50px);
+  }
+  80% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
 #title {
-    margin: 0 auto;
+  margin: 0 auto;
 }
 
 #businessList {
@@ -15,14 +157,14 @@
 }
 
 .businessPaper {
-    width: 100%;
+  width: 100%;
 }
 
 .BusinessDirectory-root-152 {
-    /* position: relative; */
-    overflow: hidden;
-    padding: 0.5em;
-    text-align: center;
+  /* position: relative; */
+  overflow: hidden;
+  padding: 0.5em;
+  text-align: center;
 }
 
 #search {
@@ -35,14 +177,14 @@
 }
 
 #filter {
-    grid-area: filter;
+  grid-area: filter;
 }
 
 #locationOption,
 #dayOption,
 #typeOption {
-    margin-right: 2%;
-    float: left;
+  margin-right: 2%;
+  float: left;
 }
 
 #mapEmbed {
@@ -52,29 +194,28 @@
 }
 
 .clearfix::after {
-    content: "";
-    clear: both;
-    display: table;
+  content: "";
+  clear: both;
+  display: table;
 }
 
 #modal {
-    width: 30%;
-    min-height: 11em;
+  width: 30%;
+  min-height: 11em;
 }
 
 #modal::after {
-    content: "";
-    background: url("./images/nightOwl.png");
-    object-fit: fill;
-    opacity: 0.1;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    position: absolute;
-    z-index: -1;   
-  }
-  
+  content: "";
+  background: url("./images/nightOwl.png");
+  object-fit: fill;
+  opacity: 0.1;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;
+}
 
 .container {
   display: grid;
@@ -89,28 +230,27 @@
 }
 
 @media only screen and (max-width: 980px) {
-
-    .container {
-        display: grid;
-        grid-template-columns: 1fr 82% 8% 1fr;
-        grid-template-rows: 65px 25px auto auto auto auto;
-        grid-template-areas:
-          "header header header header"
-          "...... ...... ...... ......"
-          "...... search search ......"
-          "...... filter filter ......"
-          "...... map map ............"
-          "...... sidebar sidebar ....";
-      }
-
-      #search {
-        justify-self: center;
-        width: 80%;
-      }
-
-      #filter {
-          display: flex;
-          align-items: center;
-          justify-content: center;
-      }
+  .container {
+    display: grid;
+    grid-template-columns: 1fr 82% 8% 1fr;
+    grid-template-rows: 65px 25px auto auto auto auto;
+    grid-template-areas:
+      "header header header header"
+      "...... ...... ...... ......"
+      "...... search search ......"
+      "...... filter filter ......"
+      "...... map map ............"
+      "...... sidebar sidebar ....";
   }
+
+  #search {
+    justify-self: center;
+    width: 80%;
+  }
+
+  #filter {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
