set a bottom margin for business card list, rounded corners and fixed the sizing of modal so that it doesn't stretch past the screen--see cypress street modal i.e.

--- a/client/src/CSS/App.css
+++ b/client/src/CSS/App.css
@@ -17,11 +17,10 @@ body {
   grid-area: sidebar;
 }
 
-.businessPaper {
+/* .businessPaper {
   width: 100%;
-  margin-bottom: 6px;
   box-shadow: 3px;
-}
+} */
 
 .BusinessDirectory-root-198 {
   position: relative;
