--- a/client/src/CSS/App.css
+++ b/client/src/CSS/App.css
@@ -95,12 +95,12 @@ select {
   display: table;
 }
 
-#bizModalBtn {
+.bizModalBtn {
   background-color: white;
   color: #f50057;
   border: none;
 }
-#bizModalBtn:hover {
+.bizModalBtn:hover {
   background-color: #3f51b5;
   color: white;
   border: none;
